[tool.poetry]
name = "infinity-1"
version = "0.1.0"
description = ""
authors = ["Dishalex <131618968+Dishalex@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
